--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Solomon &amp; Faith</h1>
 							<h2>We Are Getting Married</h2>
+                                                        <div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Feel Welcomed</a></p>
 						</div>
 					</div>
