--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 	<script src="js/magnific-popup-options.js"></script>
 
 	<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script> -->
-	<script src="js/simplyCountdown.js"></script>
+	<script src="count.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
