--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							<h1>Solomon &amp; Faith</h1>
 							<h2>We Are Getting Married</h2>
                                                         <div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#" class="btn btn-default btn-sm">Feel Welcomed</a></p>
+							<p><a href="#" class="btn btn-default btn-sm">Save Date</a></p>
 						</div>
 					</div>
 				</div>
